--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@
 
 @font-face {
     font-family: "ARCADECLASSIC";
-    src: url('../public/fonts/ARCADECLASSIC.ttf');
+    src: url('./assets/fonts/ARCADECLASSIC.ttf');
 }
