--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@
 
 @font-face {
     font-family: "ARCADECLASSIC";
-    src: url('./fonts/ARCADECLASSIC.ttf');
+    src: url('/src/assets/fonts/ARCADECLASSIC.ttf');
 }
